--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,7 @@
 $dark-mode-text-color: #f5f5f5;
+$dark-mode-text-color-hover: #fff;
 $dark-mode-blue-text-color: #3982f6;
+$dark-mode-blue-text-color-hover: #6098f3;
 $dark-mode-gray-text-color: #757575;
+$dark-mode-gray-text-color-hover: #989898;
 $dark-mode-black-background: #171717;
