feat: setup default layout to the components

--- a/src/app/blog/posts/posts.component.html
+++ b/src/app/blog/posts/posts.component.html
@@ -1,1 +1,8 @@
-<p>posts works!</p>
+<main class="container">
+  <section class="page-description">
+    <p class="page-description-title">Posts</p>
+    <p class="page-description-text">All the posts I created</p>
+  </section>
+  <div class="divisor"></div>
+  <section class="page-content">stfuuuuuu</section>
+</main>
