--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,7 @@
-<p>about works!</p>
+<main class="container">
+  <section class="page-description">
+    <p class="page-description-title">About</p>
+  </section>
+  <div class="divisor"></div>
+  <section class="page-content">stfuuuuuu</section>
+</main>
