--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<main class="container">
+  <section class="page-description">
+    <p class="page-description-title">Latest</p>
+    <p class="page-description-text">My recent stuff</p>
+  </section>
+  <div class="divisor"></div>
+  <section class="page-content">stfuuuuuu</section>
+</main>
