feat: page information component

--- a/src/app/blog/posts/posts.component.html
+++ b/src/app/blog/posts/posts.component.html
@@ -1,8 +1,7 @@
 <main class="container">
-  <section class="page-description">
-    <p class="page-description-title">Posts</p>
-    <p class="page-description-text">All the posts I created</p>
-  </section>
-  <div class="divisor"></div>
+  <app-page-info
+    postTitle="Posts"
+    postDescription="All the posts I created"
+  ></app-page-info>
   <section class="page-content">stfuuuuuu</section>
 </main>
