--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,9 +3,7 @@
   <nav>
     <ul>
       <li>
-        <a routerLink="/blog/posts" routerLinkActive="router-link-active"
-          >Blog</a
-        >
+        <a routerLink="/blog" routerLinkActive="router-link-active">Blog</a>
       </li>
       <li>
         <a routerLink="/about" routerLinkActive="router-link-active">About</a>
