--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,7 +1,4 @@
 <main class="container">
-  <section class="page-description">
-    <p class="page-description-title">About</p>
-  </section>
-  <div class="divisor"></div>
+  <app-page-info postTitle="About"></app-page-info>
   <section class="page-content">stfuuuuuu</section>
 </main>
