--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,7 @@
 <main class="container">
-  <section class="page-description">
-    <p class="page-description-title">Latest</p>
-    <p class="page-description-text">My recent stuff</p>
-  </section>
-  <div class="divisor"></div>
+  <app-page-info
+    postTitle="Latest"
+    postDescription="My recent stuff"
+  ></app-page-info>
   <section class="page-content">stfuuuuuu</section>
 </main>
