feat: changing selector component

--- a/src/app/blog/posts/posts.component.html
+++ b/src/app/blog/posts/posts.component.html
@@ -1,7 +1,7 @@
 <main class="container">
-  <app-page-info
+  <page-info
     postTitle="Posts"
     postDescription="All the posts I created"
-  ></app-page-info>
+  ></page-info>
   <section class="page-content">stfuuuuuu</section>
 </main>
