--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,4 +1,4 @@
 <main class="container">
-  <app-page-info postTitle="About"></app-page-info>
+  <page-info postTitle="About"></page-info>
   <section class="page-content">stfuuuuuu</section>
 </main>
