--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,4 @@
 <main class="container">
-  <app-page-info
-    postTitle="Latest"
-    postDescription="My recent stuff"
-  ></app-page-info>
+  <page-info postTitle="Latest" postDescription="My recent stuff"></page-info>
   <section class="page-content">stfuuuuuu</section>
 </main>
