--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,12 @@
 <main class="container">
   <page-info postTitle="Latest" postDescription="My recent stuff"></page-info>
-  <section class="page-content">stfuuuuuu</section>
+  <section class="page-content">
+    <home-post-block
+      imagePath="../../../assets/images/posts/hello-world.png"
+      postTitle="Hello World"
+      postDescription="This is the first post of my blog. Here I just want to say what I want to
+      share with you and what are my goals for 2023."
+      routerLink="/blog/hello-world"
+    ></home-post-block>
+  </section>
 </main>
