feat: footer component

--- a/src/app/blog/posts/posts.component.html
+++ b/src/app/blog/posts/posts.component.html
@@ -3,5 +3,17 @@
     postTitle="Posts"
     postDescription="All the posts I created"
   ></page-info>
-  <section class="page-content">stfuuuuuu</section>
+  <section class="page-content">
+    <blog-post-block
+      date="Sat, 14/01/2023"
+      postTitle="Hello World"
+      postDescription="This is the first post of my blog. Here I just want to say what I want to share with you and what are my goals for 2023."
+      routerLink="/blog/hello-world"
+    ></blog-post-block>
+    <blog-post-block
+      date="Wed, 25/01/2023"
+      postTitle="Angular Customized Directives"
+      postDescription="All you need to know about Angular Directives."
+    ></blog-post-block>
+  </section>
 </main>
