--- a/src/app/components/blog-post-block/blog-post-block.component.html
+++ b/src/app/components/blog-post-block/blog-post-block.component.html
@@ -1,11 +1,6 @@
 <section class="home-post-block">
-  <div class="image">
-    <img
-      src="{{ imagePath }}"
-      alt="Mountain Image"
-      loading="lazy"
-      class="image-hello-world"
-    />
+  <div class="date">
+    <p>{{ date }}</p>
   </div>
   <div class="text">
     <h2>{{ postTitle }}</h2>
@@ -15,4 +10,3 @@
     <span>Read more →</span>
   </div>
 </section>
-<div class="divisor"></div>
