feat: some changes

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,5 +4,6 @@ $dark-mode-blue-text-color: #3982f6;
 $dark-mode-blue-text-color-hover: #6098f3;
 $dark-mode-gray-text-color: #8f8f8f;
 $dark-mode-gray-text-color-hover: #989898;
+$dark-mode-gray-text-color-post: #d1d0d0;
 $dark-mode-black-background: #171717;
 $dark-mode-gray-divisor: #4f4f4f;
