--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap");
 
 * {
-  font-family: "Roboto", sans-serif;
+  font-family: "Merriweather", sans-serif;
 }
