feat: responsitivity/minifying files

--- a/src/app/blog/hello-world/hello-world.component.html
+++ b/src/app/blog/hello-world/hello-world.component.html
@@ -2,11 +2,10 @@
   <post-information
     postTitle="Hello World"
     postData="14/01/2023"
-    readTime="1min"
-  ></post-information>
+    readTime="1min"></post-information>
   <section class="post-content">
     <aside>
-      <return-to-blog></return-to-blog>
+      <information-block></information-block>
       <p routerLink="/blog/posts">Return to posts ←</p>
     </aside>
     <div class="content">
@@ -14,8 +13,7 @@
         src="../../../assets/images/posts/hello-world.png"
         alt="Mountains Image"
         class="image"
-        loading="lazy"
-      />
+        loading="lazy" />
       <h3>Welcome to my blog!</h3>
       <p class="p-normal-text">
         I've been planning to create this blog for a long time and after several
