--- a/src/app/blog/posts/posts.component.html
+++ b/src/app/blog/posts/posts.component.html
@@ -1,14 +1,12 @@
 <main class="container">
-  <page-info
+  <page-description
     postTitle="Posts"
-    postDescription="All the posts I created"
-  ></page-info>
+    postDescription="All the posts I created"></page-description>
   <section class="page-content">
     <blog-post-block
       date="Sat, 14/01/2023"
       postTitle="Hello World"
       postDescription="This is the first post of my blog. Here I just want to say what I want to share with you and what are my goals for 2023."
-      routerLink="/blog/hello-world"
-    ></blog-post-block>
+      routerLink="/blog/hello-world"></blog-post-block>
   </section>
 </main>
