--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/variables.scss";
+@import '../../../styles/variables.scss';
 
 header {
   width: 100%;
@@ -51,6 +51,15 @@ header {
           }
         }
       }
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  header {
+    justify-content: center;
+    h2 {
+      font-size: 1.2rem;
     }
   }
 }
