--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
-@import "styles/variables.scss";
-@import "styles/resets.scss";
-@import "styles/fonts.scss";
+@import 'styles/variables.scss';
+@import 'styles/resets.scss';
+@import 'styles/fonts.scss';
 
 body {
   background-color: $dark-mode-black-background;
