--- a/src/app/components/blog-post-block/blog-post-block.component.scss
+++ b/src/app/components/blog-post-block/blog-post-block.component.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/variables.scss";
+@import '../../../styles/variables.scss';
 
 .home-post-block {
   display: flex;
@@ -65,4 +65,12 @@
   width: 100%;
   height: 0.019rem;
   background-color: $dark-mode-gray-divisor;
+}
+
+@media (max-width: 500px) {
+  .home-post-block {
+    .date {
+      display: none;
+    }
+  }
 }
