--- a/src/app/blog/hello-world/hello-world.component.scss
+++ b/src/app/blog/hello-world/hello-world.component.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/variables.scss";
+@import '../../../styles/variables.scss';
 
 .container {
   width: 100%;
@@ -27,7 +27,6 @@
     .content {
       padding: 1rem;
       width: 60%;
-
       margin-bottom: 1rem;
 
       .image {
@@ -43,11 +42,39 @@
         margin-top: 2rem;
       }
 
+      .return-posts {
+        color: $dark-mode-blue-text-color;
+        cursor: pointer;
+        margin-top: 1rem;
+
+        &:hover {
+          color: $dark-mode-blue-text-color-hover;
+        }
+      }
+
       .p-normal-text {
         letter-spacing: 0.05rem;
         line-height: 1.5rem;
         margin-top: 2rem;
         color: $dark-mode-gray-text-color-post;
+      }
+    }
+  }
+}
+
+@media (max-width: 950px) {
+  .container {
+    .post-content {
+      aside {
+        display: none;
+      }
+
+      .content {
+        width: 100%;
+
+        .image {
+          display: none;
+        }
       }
     }
   }
